Added Google Verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Turn your chats into playlists" />
   <meta name="color-scheme" content="light only">
+  <meta name="google-site-verification" content="gpfj6W9IfzOsSsHLICQu7RpnlrIOz8nZPyAcvS1OzbE" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
